--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
 </div>
 <table>
     <t>
+        <td>Photo</td>
+        <td>Géolocalisation</td>
+    </t>
+    <t>
         <td><img id="photo" style="display: none; max-width: 100%; height: auto;" /></td>
         <td><div id="map"><!-- Conteneur pour la carte --> </div></td>
     </t>
