--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             max-width: 150px;
             margin-bottom: 10px;
         }
+        #photo {
+            max-width: 200px;
+            height: 100%;
+            margin-top: 10px;
+        }
     </style>
 </head>
 <body>
