--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Application de Rapport Photo v24.11.11.13-50</title>
+    <title>OdiCEE Photo v.13-55</title>
     <!-- Inclure jspdf -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <!-- Inclure leaflet -->
@@ -44,7 +44,7 @@
         <td>Géolocalisation</td>
     </tr>
     <tr>
-        <td><img id="photo" style="display: none; max-width: 100%; height: auto;" /></td>
+        <td><img id="photo" style="display: none; max-width: 100px; height: auto;" /></td>
         <td><div id="map"><!-- Conteneur pour la carte --> </div></td>
     </tr>
 </table>
