--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OdiCEE Photo v.13-55</title>
+    <title>OdiCEE Photo v.14-00</title>
     <!-- Inclure jspdf -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <!-- Inclure leaflet -->
@@ -13,8 +13,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <style>
         #map {
-            width: 100%;
-            height: 300px;
+            width: 200%;
+            height: 100%;
             margin-top: 10px;
         }
         #logo {
@@ -44,7 +44,7 @@
         <td>Géolocalisation</td>
     </tr>
     <tr>
-        <td><img id="photo" style="display: none; max-width: 100px; height: auto;" /></td>
+        <td><img id="photo" style="photo" /></td>
         <td><div id="map"><!-- Conteneur pour la carte --> </div></td>
     </tr>
 </table>
