--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OdiCEE Photo v.14-20</title>
+    <title>OdiCEE Photo</title>
     <!-- Inclure jspdf -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
     <!-- Inclure leaflet -->
@@ -32,7 +32,7 @@
 
 <img id="logo" src="logo.png" alt="Logo OdiCEE Photo">    
     
-<h2>Application de Rapport Photo</h2>
+<h2>Application de Rapport Photo< (v.14-30)/h2>
 
 <div>
     <button id="takePhotoBtn">Prendre une photo</button>
