--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 </head>
 <body>
 
-<img id="logo" src="logo.png" alt="Logo OdiCEE Photo">    
-    
-<h2>Application de Rapport Photo< (v.14-30)/h2>
+<div>
+    <img id="logo" src="logo.png" alt="Logo OdiCEE Photo">    
+    <h2>Application de Rapport Photo</h2>
+</div>
 
 <div>
     <button id="takePhotoBtn">Prendre une photo</button>
