--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@
 </div>
 
 <script src="app.js"></script>
-    v. 18-50
+    HTML = v. 18-50
+    JS = <script>
+    // Récupérer l'élément HTML où afficher la version
+    const appVersionElement = document.getElementById('app-version');
+
+    // Afficher la version dans l'élément HTML
+    appVersionElement.textContent = `Version de l'application : ${appVersion}`;
+  </script>
 </body>
 </html>
