--- a/index.html
+++ b/index.html
@@ -55,13 +55,15 @@
 </div>
 
 <script src="app.js"></script>
-    HTML = v. 19-10
-    JS = <script>
-    // Récupérer l'élément HTML où afficher la version
-    const appVersionElement = document.getElementById('app-version');
-
-    // Afficher la version dans l'élément HTML
-    appVersionElement.textContent = `Version de l'application : ${appVersion}`;
-  </script>
+    <div id="app-version">
+        HTML = v. 19-15
+        JS = <script>
+        // Récupérer l'élément HTML où afficher la version
+        const appVersionElement = document.getElementById('app-version');
+    
+        // Afficher la version dans l'élément HTML
+        appVersionElement.textContent = `Version de l'application : ${appVersion}`;
+      </script>
+    </div>
 </body>
 </html>
