--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
 </div>
 <div id="app-version">
     
-        HTML = v. 20-00
+        HTML = v. 20-40
         JS = <script>
         // Attendre que le DOM soit chargé avant d'exécuter le code
         document.addEventListener("DOMContentLoaded", () => {
             // Récupérer l'élément HTML où afficher la version
             const appVersionElement = document.getElementById('app-version');
             // Afficher la version dans l'élément HTML
-            appVersionElement.textContent = `Version de l'application : ${appVersion}`;
+            appVersionElement.textContent = `Version de l'application : ${app-version}`;
         });
     </script>
     <script src="app.js"></script>
