--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </div>
 <div id="app-version">
     
-        HTML = v. 20-45
+        HTML = v. 20-45-1
         JS = <script>
         // Attendre que le DOM soit chargé avant d'exécuter le code
         document.addEventListener("DOMContentLoaded", () => {
