--- a/index.html
+++ b/index.html
@@ -54,17 +54,8 @@
     <button id="generatePdfBtn" disabled>Générer le PDF</button>
 </div>
 <div id="app-version">
-    
-        HTML = v. 20-45-1
-        JS = <script>
-        // Attendre que le DOM soit chargé avant d'exécuter le code
-        document.addEventListener("DOMContentLoaded", () => {
-            // Récupérer l'élément HTML où afficher la version
-            const appVersionElement = document.getElementById('app-version');
-            // Afficher la version dans l'élément HTML
-            appVersionElement.textContent = `Version de l'application : ${versionOdiCEEPhoto}`;
-        });
-    </script>
+    v. 20-50
+</div>
     <script src="app.js"></script>
 </div>
 </body>
