--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
 <div>
     <button id="generatePdfBtn" disabled>Générer le PDF</button>
 </div>
-<div id="app-version">
-    v. 20-50
-</div>
-    <script src="app.js"></script>
-</div>
+<div id="app-version">v. 21-00/div>
+<script src="app.js"></script>
 </body>
 </html>
