--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 <div>
     <button id="generatePdfBtn" disabled>Générer le PDF</button>
 </div>
-<div id="app-version">v. 21-18</div><br>
-     <span id="appVersion"></span>
+<div id="app-version">v. 21-18<br>
+     <span id="appVersion"></span></div>
 <script src="app.js"></script>
 </body>
 </html>
