--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
 <div>
     <button id="generatePdfBtn" disabled>Générer le PDF</button>
 </div>
-<div id="app-version">v. 21-31<br>
-     <span id="appVersion"></span></div>
+<div id="app-version"><span id="appVersion"></span></div>
 <script src="app.js"></script>
 </body>
 </html>
