--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     </style>
 </head>
 <body>
-
-<div>
-    <img id="logo" src="logo.png" alt="Logo OdiCEE Photo">    
-    <h2>Application de Rapport Photo</h2>
-</div>
-
+<table>
+    <tr>
+        <td><img id="logo" src="logo.png" alt="Logo OdiCEE Photo"></td>
+        <td><h2>Application de Rapport Photo</h2></td>
+    </tr>
+</table>
 <div>
     <button id="takePhotoBtn">Prendre une photo</button>
     <input type="file" id="cameraInput" accept="image/*" capture="environment" style="display: none;">
